--- a/sideburn-web/src/app/app.component.html
+++ b/sideburn-web/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="text-align: center;margin-top: 200px;">
   <img src="assets/images/logo.png" />
+  <div><h1>Kommer snart...</h1></div>
 </div>
-<div>Kommer snart...</div>
