--- a/sideburn-web/src/app/app.component.html
+++ b/sideburn-web/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div style="text-align: center;margin-top: 150px;">
   <img src="assets/images/logo.png" />
-  <div><h1>Kommer snart...</h1></div>
+  <h1>Kommer snart...</h1>
 </div>
