--- a/sideburn-web/src/app/app.component.html
+++ b/sideburn-web/src/app/app.component.html
@@ -1,4 +1,31 @@
-<div style="text-align: center;margin-top: 150px;">
-  <img src="assets/images/logo.png" />
-  <h1>Kommer snart...</h1>
+<div class="hero">
+  <header class="hero-header">
+    <!-- closest to body - page header -->
+    <img src="assets/images/banner.jpg" width="100%" />
+    <mat-toolbar>
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span>My App</span>
+      <span class="example-spacer"></span>
+      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+        <mat-icon>favorite</mat-icon>
+      </button>
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+        <mat-icon>share</mat-icon>
+      </button>
+    </mat-toolbar>
+  </header>
+</div>
+<div>
+  <article class="article">
+    <header class="article-header">
+      <h1>My blog title</h1>
+      <p>Todd Motto, <time>May 15, 2020</time></p>
+    </header>
+    <div>
+      <p>Your article text...</p>
+      <h2>The next title</h2>
+    </div>
+  </article>
 </div>
