--- a/sideburn-web/src/app/app.component.html
+++ b/sideburn-web/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="header">
-  <h2>Blog Name</h2>
-  <ul ngbNav #nav="ngbNav" class="nav">
+  <div class="banner"></div>
+  <ul ngbNav #nav="ngbNav" class="nav nav-pills">
     <li ngbNavItem>
-      <a ngbNavLink>First</a>
+      <a ngbNavLink>Hjem</a>
       <ng-template ngbNavContent>
         <div class="card">
           <h2>TITLE HEADING</h2>
@@ -19,42 +19,52 @@
       </ng-template>
     </li>
     <li ngbNavItem>
-      <a ngbNavLink>Second</a>
+      <a ngbNavLink>Vedtekter</a>
       <ng-template ngbNavContent>
         <div class="card">
-          <h2>TITLE HEADING</h2>
-          <h5>Title description, Dec 7, 2017</h5>
-          <div class="fakeimg" style="height:200px;">Image</div>
+          <h2>Vedtekter - Sideburn Whiskylaug</h2>
+          <h5>Oppdatert, 13 Oktober 2021</h5>
           <p>Some text..</p>
         </div>
       </ng-template>
     </li>
+    <li ngbNavItem>
+      <a ngbNavLink>Om oss</a>
+      <ng-template ngbNavContent>
+      </ng-template>
+    </li>
+    <li ngbNavItem>
+      <a ngbNavLink>Arrangementer</a>
+      <ng-template ngbNavContent>
+      </ng-template>
+    </li>
   </ul>
 </div>
-
-<div class="row">
-  <div class="leftcolumn">
-    <div [ngbNavOutlet]="nav"></div>
+<div class="content">
+  <div class="row">
+    <div class="leftcolumn">
+      <div [ngbNavOutlet]="nav"></div>
+    </div>
+    <div class="rightcolumn">
+      <div class="card">
+        <h2>About us</h2>
+        <div class="fakeimg" style="height:100px;">Image</div>
+        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      </div>
+      <div class="card">
+        <h3>Popular Post</h3>
+        <div class="fakeimg">Image</div><br>
+        <div class="fakeimg">Image</div><br>
+        <div class="fakeimg">Image</div>
+      </div>
+      <div class="card">
+        <h3>Follow us</h3>
+        <p>Some text..</p>
+      </div>
+    </div>
   </div>
-  <div class="rightcolumn">
-    <div class="card">
-      <h2>About us</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    </div>
-    <div class="card">
-      <h3>Popular Post</h3>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div>
-    </div>
-    <div class="card">
-      <h3>Follow us</h3>
-      <p>Some text..</p>
-    </div>
-  </div>
-</div>
 
-<div class="footer">
-  <h2>Footer</h2>
+  <div class="footer">
+    <h2>Footer</h2>
+  </div>
 </div>
