--- a/sideburn-web/src/app/app.component.html
+++ b/sideburn-web/src/app/app.component.html
@@ -5,14 +5,18 @@
       <a ngbNavLink>Hjem</a>
       <ng-template ngbNavContent>
         <div class="card">
-          <h2>TITLE HEADING</h2>
-          <h5>Title description, Dec 7, 2017</h5>
-          <div class="fakeimg" style="height:200px;">Image</div>
-          <p>Some text..</p>
-        </div>
-        <div class="card">
-          <h2>TITLE HEADING</h2>
-          <h5>Title description, Sep 2, 2017</h5>
+          <h2>Kommer snart</h2>
+          <h5>Vi jobber på "spreng" med å ferdigstille sidene.</h5>
+          <div class="meta">
+            <time class="date dt-published" datetime="2021-10-14T05:15:00+00:00" itemprop="datePublished">
+              <mat-icon aria-hidden="false" aria-label="Publisert">edit_calendar</mat-icon> 14 oktober 2021
+            </time>
+            <span class="tags">
+              <mat-icon aria-hidden="false" aria-label="Kategorier">sell</mat-icon>
+              <a href="/tags/#azure">azure</a> 
+              <a href="/tags/#security">security</a>
+            </span>
+          </div>
           <div class="fakeimg" style="height:200px;">Image</div>
           <p>Some text..</p>
         </div>
