Small design changes

--- a/sideburn-web/src/app/app.component.html
+++ b/sideburn-web/src/app/app.component.html
@@ -6,19 +6,19 @@
       <ng-template ngbNavContent>
         <div class="card">
           <h2>Kommer snart</h2>
-          <h5>Vi jobber på "spreng" med å ferdigstille sidene.</h5>
+          <h6>Vi jobber på "spreng" med å ferdigstille sidene.</h6>
           <div class="meta">
             <time class="date dt-published" datetime="2021-10-14T05:15:00+00:00" itemprop="datePublished">
               <mat-icon aria-hidden="false" aria-label="Publisert">edit_calendar</mat-icon> 14 oktober 2021
             </time>
             <span class="tags">
               <mat-icon aria-hidden="false" aria-label="Kategorier">sell</mat-icon>
-              <a href="/tags/#azure">azure</a> 
-              <a href="/tags/#security">security</a>
+              <a href="/tags/#web">web</a>
             </span>
           </div>
-          <div class="fakeimg" style="height:200px;">Image</div>
-          <p>Some text..</p>
+          <p><img src="../assets/images/work-in-progress.jpg" class="article-image">
+            Vi er snart klare med litt mer innhold. Denne siden er tilgjengelig for å gi medlemmene en liten smakebit på
+            hvordan det vil se ut. Vi tar gjerne imot tilbakemeldinger og endringsforlag.</p>
         </div>
       </ng-template>
     </li>
@@ -27,8 +27,8 @@
       <ng-template ngbNavContent>
         <div class="card">
           <h2>Vedtekter - Sideburn Whiskylaug</h2>
-          <h5>Oppdatert, 13 Oktober 2021</h5>
-          <p>Some text..</p>
+          <h6>Oppdatert, 13 Oktober 2021</h6>
+          <p>Under utarbeidelse..</p>
         </div>
       </ng-template>
     </li>
@@ -51,19 +51,16 @@
     </div>
     <div class="rightcolumn">
       <div class="card">
-        <h2>About us</h2>
-        <div class="fakeimg" style="height:100px;">Image</div>
-        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+        <h2>Søk</h2>
+        <input type="text" />
       </div>
       <div class="card">
-        <h3>Popular Post</h3>
-        <div class="fakeimg">Image</div><br>
-        <div class="fakeimg">Image</div><br>
-        <div class="fakeimg">Image</div>
+        <h3>Populære nyheter</h3>
+        <p>...</p>
       </div>
       <div class="card">
-        <h3>Follow us</h3>
-        <p>Some text..</p>
+        <h3>Følg oss</h3>
+        <p>...</p>
       </div>
     </div>
   </div>
