Added responsive logos

--- a/sideburn-web/src/app/app.component.html
+++ b/sideburn-web/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="header">
-  <div class="banner"></div>
+  <div class="banner-small d-md-none"></div>
+  <div class="banner-med d-none d-md-block d-lg-none"></div>
+  <div class="banner-large d-none d-lg-block"></div>
   <ul ngbNav #nav="ngbNav" class="nav nav-pills">
     <li ngbNavItem>
       <a ngbNavLink>Hjem</a>
