--- a/sideburn-web/src/app/app.component.html
+++ b/sideburn-web/src/app/app.component.html
@@ -2,54 +2,55 @@
   <div class="banner-small d-md-none"></div>
   <div class="banner-med d-none d-md-block d-lg-none"></div>
   <div class="banner-large d-none d-lg-block"></div>
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
     <button class="navbar-toggler" type="button" data-toggle="collapse" (click)="isMenuCollapsed = !isMenuCollapsed">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul ngbNav #nav="ngbNav" class="navbar nav w-100">
-          <li ngbNavItem>
-            <a ngbNavLink>Hjem</a>
-            <ng-template ngbNavContent>
-              <div class="card">
-                <h2>Kommer snart</h2>
-                <h6>Vi jobber på "spreng" med å ferdigstille sidene.</h6>
-                <div class="meta">
-                  <time class="date dt-published" datetime="2021-10-14T05:15:00+00:00" itemprop="datePublished">
-                    <mat-icon aria-hidden="false" aria-label="Publisert">edit_calendar</mat-icon> 14 oktober 2021
-                  </time>
-                  <span class="tags">
-                    <mat-icon aria-hidden="false" aria-label="Kategorier">sell</mat-icon>
-                    <a href="/tags/#web">web</a>
-                  </span>
-                </div>
-                <p><img src="../assets/images/work-in-progress.jpg" class="article-image">
-                  Vi er snart klare med litt mer innhold. Denne siden er tilgjengelig for å gi medlemmene en liten smakebit på
-                  hvordan det vil se ut. Vi tar gjerne imot tilbakemeldinger og endringsforlag.</p>
+        <li ngbNavItem>
+          <a ngbNavLink>Hjem</a>
+          <ng-template ngbNavContent>
+            <div class="card">
+              <h2>Kommer snart</h2>
+              <h6>Vi jobber på "spreng" med å ferdigstille sidene.</h6>
+              <div class="meta">
+                <time class="date dt-published" datetime="2021-10-14T05:15:00+00:00" itemprop="datePublished">
+                  <mat-icon aria-hidden="false" aria-label="Publisert">edit_calendar</mat-icon> 14 oktober 2021
+                </time>
+                <span class="tags">
+                  <mat-icon aria-hidden="false" aria-label="Kategorier">sell</mat-icon>
+                  <a href="/tags/#web">web</a>
+                </span>
               </div>
-            </ng-template>
-          </li>
-          <li ngbNavItem>
-            <a ngbNavLink>Vedtekter</a>
-            <ng-template ngbNavContent>
-              <div class="card">
-                <h2>Vedtekter - Sideburn Whiskylaug</h2>
-                <h6>Oppdatert, 13 Oktober 2021</h6>
-                <p>Under utarbeidelse..</p>
-              </div>
-            </ng-template>
-          </li>
-          <li ngbNavItem>
-            <a ngbNavLink>Om oss</a>
-            <ng-template ngbNavContent>
-            </ng-template>
-          </li>
-          <li ngbNavItem>
-            <a ngbNavLink>Arrangementer</a>
-            <ng-template ngbNavContent>
-            </ng-template>
-          </li>
-                <li [ngbNavItem]="3" *ngIf="(auth.isAuthenticated$ | async) == false" class="ml-auto">
+              <p><img src="../assets/images/work-in-progress.jpg" class="article-image">
+                Vi er snart klare med litt mer innhold. Denne siden er tilgjengelig for å gi medlemmene en liten
+                smakebit på
+                hvordan det vil se ut. Vi tar gjerne imot tilbakemeldinger og endringsforlag.</p>
+            </div>
+          </ng-template>
+        </li>
+        <li ngbNavItem>
+          <a ngbNavLink>Vedtekter</a>
+          <ng-template ngbNavContent>
+            <div class="card">
+              <h2>Vedtekter - Sideburn Whiskylaug</h2>
+              <h6>Oppdatert, 13 Oktober 2021</h6>
+              <p>Under utarbeidelse..</p>
+            </div>
+          </ng-template>
+        </li>
+        <li ngbNavItem>
+          <a ngbNavLink>Om oss</a>
+          <ng-template ngbNavContent>
+          </ng-template>
+        </li>
+        <li ngbNavItem>
+          <a ngbNavLink>Arrangementer</a>
+          <ng-template ngbNavContent>
+          </ng-template>
+        </li>
+        <li [ngbNavItem]="3" *ngIf="(auth.isAuthenticated$ | async) == false" class="ml-auto">
           <a ngbNavLink href="#" (click)="loginWithRedirect()"><span class="glyphicon glyphicon-log-in"></span>
             Login</a>
         </li>
@@ -73,7 +74,7 @@
             </button>
             <div class="dropdown-divider"></div>
             <button ngbDropdownItem (click)="logoutWithRedirect()" id="qsLogoutBtn">
-              <mat-icon aria-hidden="false" aria-label="Kategorier">poweroff</mat-icon>
+              <mat-icon aria-hidden="false" aria-label="Kategorier">poweroff</mat-icon> Logg ut
             </button>
           </div>
         </li>
