Added more routing and components

--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -20,15 +20,15 @@
     </div>
     <div class="rightcolumn">
         <div class="card">
-            <h2>Søk</h2>
+            <div class="header">Søk</div>
             <input type="text" />
         </div>
         <div class="card">
-            <h3>Populære nyheter</h3>
+            <div class="header">Populære nyheter</div>
             <p>...</p>
         </div>
         <div class="card">
-            <h3>Følg oss</h3>
+            <div class="header">Følg oss</div>
             <p>...</p>
         </div>
     </div>
