--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -12,10 +12,43 @@
                     <a href="/tags/#web">web</a>
                 </span>
             </div>
-            <p><img src="../assets/images/work-in-progress.jpg" class="article-image">
-                Vi er snart klare med litt mer innhold. Denne siden er tilgjengelig for å gi medlemmene en liten
-                smakebit på
-                hvordan det vil se ut. Vi tar gjerne imot tilbakemeldinger og endringsforlag.</p>
+            <div class="content">
+                <img src="../assets/images/work-in-progress.jpg" class="article-image" />
+                <p>Vi er snart klare med litt mer innhold. Denne siden er tilgjengelig for å gi medlemmene en liten
+                    smakebit på
+                    hvordan det vil se ut. Vi tar gjerne imot tilbakemeldinger og endringsforlag.</p>
+                <p>Consectetur aliquip ut ut qui nulla magna cupidatat eu non fugiat culpa. Duis ex non eu exercitation
+                    magna laborum. Proident nisi minim nisi anim officia eu est. Duis consequat ut ad aliqua fugiat
+                    ullamco sit mollit id non est ex voluptate ex.\nIrure sunt laboris occaecat ea consectetur nulla
+                    veniam esse aliqua aliquip commodo nostrud aliqua. Exercitation ut in reprehenderit adipisicing enim
+                    in. Ad reprehenderit pariatur amet Lorem eu non. Elit id fugiat aute magna. Ut minim pariatur elit
+                    nulla dolore. Aliqua quis sit nostrud magna exercitation proident dolor dolor sint occaecat. Non
+                    tempor aliqua anim mollit pariatur labore pariatur laborum eu. Amet nisi pariatur eu in officia
+                    Lorem aliqua deserunt ex aliquip do ullamco elit adipisicing.\nAnim incididunt sit deserunt
+                    consequat qui magna nostrud dolore cupidatat aliquip amet. Fugiat duis non irure dolore et excepteur
+                    ipsum ad consectetur tempor pariatur commodo in. Lorem minim id sint ad eiusmod. Ipsum incididunt
+                    anim eu dolor Lorem elit exercitation tempor exercitation esse velit sint est commodo. Minim
+                    excepteur culpa minim tempor amet sint cupidatat. Pariatur exercitation fugiat consequat
+                    quis.\nIncididunt incididunt elit adipisicing nostrud voluptate occaecat qui est eu. Non Lorem enim
+                    sint fugiat proident adipisicing enim elit sint dolor deserunt. In reprehenderit sunt aliquip. Ut
+                    fugiat mollit minim tempor qui. Occaecat commodo cupidatat eu culpa aliqua eu adipisicing pariatur
+                    est officia ipsum nulla minim voluptate. Minim ea duis amet aliqua ipsum eiusmod ipsum et pariatur
+                    elit. Quis quis ut cupidatat ea magna ipsum incididunt.\nOccaecat ex sit amet consectetur incididunt
+                    adipisicing pariatur labore aliquip duis cillum. Exercitation elit enim excepteur velit incididunt
+                    qui aute ipsum in minim officia proident. Esse nisi non nostrud cupidatat dolore exercitation non
+                    pariatur mollit amet voluptate aliquip culpa nisi aliquip. Velit et ut pariatur consequat id magna
+                    veniam proident quis officia. Officia dolor qui eiusmod cillum consectetur quis in enim enim.\nSit
+                    ex qui consectetur minim. Proident enim minim eu tempor duis ex dolor. Anim Lorem pariatur occaecat
+                    nostrud tempor commodo. Magna tempor voluptate irure tempor voluptate aute magna veniam anim eu sit
+                    laborum cillum mollit labore. Quis anim veniam amet laboris ex ut in elit. Elit fugiat culpa
+                    deserunt elit esse qui ut sunt exercitation nostrud eiusmod dolore. Ea eu dolore minim elit ut nisi
+                    veniam quis ea duis sunt tempor. Aute commodo esse elit.\nCulpa id sint velit veniam cupidatat
+                    dolore voluptate sit tempor irure id Lorem. Pariatur ad id et mollit proident dolor sit. Esse enim
+                    et nisi culpa cillum nisi culpa magna amet aliqua esse quis Lorem non. Eiusmod ad officia dolor
+                    consequat fugiat in id excepteur nulla cillum tempor dolor. Sit sint ad esse dolore minim est
+                    consequat ut incididunt incididunt cillum. Anim proident commodo ut excepteur quis consectetur ea.
+                </p>
+            </div>
         </div>
     </div>
     <div class="rightcolumn">
