--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -130,8 +130,8 @@ a:visited {
 .article-image {
   float: left;
   width: 300px;
-  margin-right: 10px;
-  margin-bottom: 10px;
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 .meta .date,
@@ -171,6 +171,9 @@ a:visited {
   margin: -20px -20px 20px -20px;
   font-size: larger;
   font-weight: bold;
+}
+.card .content {
+  margin-top: 20px;
 }
 
 /* Clear floats after the columns */
